wordpress-service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: wordpress
  name: wordpress-service
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: wordpress
